# scratch

./: CONSTRAINT-ENGINEERING.md  DEPENDENCY-DOCTRINE.md  FAILURE-ENGINEERING.md  FUNCTIONS-ARE-REALITY.md  INDEX.yaml  NOTICE  README.md  RECOVERY.md  WAT-NETWORK.md  chapter-63-draft.md  lattice-bounded-infinities.md  programs-as-atoms.md  random-notes.txt  tangent-spheres.md  wat-common-short-names.md
2026/04/001-axiomatic-surface/: INDEX.yaml  axiomatic-surface.md  chapter-62-draft.md  chapter-63-draft.md  lattice-as-hashmap.md  memes-as-programs.md  principia-and-the-lattice.md  surface-forms-database.md
2026/04/002-directed-evaluation/: INDEX.yaml  T7-T11-roadmap.md  chapter-64-draft.md  cryptographic-application.md  forms-as-directed-graph.md  program-as-proof.md  proof-of-computation.md  proof-of-work-kinship.md  three-factor-ux.md  universe-bound-vectors.md
2026/04/003-edn-typed-wire/: INDEX.yaml  README.md  consumer-bridge.md  crate-shape.md  dot-namespace-decision.md  edn-format-parser-findings.md  goal-and-constraints.md  open-questions.md  string-examples.md  sum-style-resolution.md  tag-as-type.md
2026/04/003-edn-typed-wire/wat-edn/: Cargo.toml
2026/04/003-edn-typed-wire/wat-edn/examples/: consumer.wat
2026/04/003-edn-typed-wire/wat-edn/src/: dispatch.rs  holon_ast.rs  lib.rs  transcode.rs  value.rs
2026/04/004-inverse-hologram/: CASCADE-ARCHITECTURE.md  ENGRAM-HOLOGRAM-DESIGN.md  MAGNITUDE-BOUNDING.md  NOISE-FILTERING-AND-ENGRAMS.md  OPEN-QUESTIONS.md  PROPOSAL.md  README.md
2026/04/005-wat-pause/: INDEX.yaml  README.md  break-primitive.md  (+8 more)
(+173 files in other folders)
